# ray-tracing

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py  tox.ini
ray_tracing/: __init__.py  mesh.py  plotting.py  rays.py  utils.py
tests/: test_rays.py
tests/test_rays_data/: faces.pt  rays_directions.pt  rays_origins.pt  vertices.pt
