[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

   
[project]
name = "ray_tracing"
requires-python = ">=3.9"
authors = [
    {name = "waczyjoan"},
]
description="Python library."
classifiers=[
        "Programming Language :: Python :: 3",
        "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
        "Operating System :: OS Independent",
]
version="0.0.1"
dynamic = ["readme"]
dependencies = [
        "torch==2.0.0",
        "click==8.1.3",
        "plotly==5.18.0",
        "numpy==1.26.2",
    ]



[tool.setuptools.dynamic]
version = {attr = "nerf-pytorch.VERSION"}
readme = {file = ["README.md"]}

[tool.setuptools.packages]
find = {}
